--- a/style.css
+++ b/style.css
@@ -169,3 +169,99 @@ main{
 .empty{
     color:gray;
 }
+
+
+@media screen and (max-width:992px) {
+
+    .header{
+        width: 100%;
+
+    }
+    .nav-container{
+        width: 90%;
+    }
+
+    .container{
+        height: auto;
+        width: 100%;
+    }
+    .section-title{
+        text-align: center;
+        text-decoration: underline;
+    }
+    .players{
+        grid-template-columns: repeat(3,1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        justify-content: center;
+    }
+    .blog{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .blog-summary{
+        margin: 0;
+        padding:0;
+        text-align: center;
+        width: 250px;
+    }
+    .latest-courses{
+        width: 100%;
+        height:auto;
+    }
+    .courses{
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .course{
+        margin: 10px 10px;
+    }
+
+}
+@media screen and (max-width:660px) {
+.nav-container,.navbrand{
+        flex-direction: column;
+    }
+    .header{
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        background-color: red;
+    }
+    .menu{
+        flex-direction: column-reverse;
+    }
+    .profile>img{
+        height: 100px;
+        width: 100px;
+    }
+
+    .container{
+        height: auto;
+        width: 100%;
+    }
+    .players{
+        grid-template-columns: repeat(2,1fr);
+    }
+    .blogs{
+        grid-template-columns: repeat(1,1fr);
+        align-items: center;
+        justify-content: center;
+    }
+    .latest-courses{
+        width: 100%;
+        height:auto;
+    }
+    .courses{
+        flex-direction: column;
+        align-items: center;
+    }
+    .course{
+        margin: 10px 0px;
+    }
+    
+
+}
